finalizacao da interface basica do aplicativo, atualizacao dos diagramas de sequencia e de classes, e das telas

--- a/src/CheatMath/app/src/main/res/values/strings.xml
+++ b/src/CheatMath/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="area_sup_cubo">Área Superficie Cubo</string>
     <string name="diag_cubo">Diagonal Cubo</string>
     <string name="calculate">Calcular</string>
+    <string name="favorites">cheatmath.favorites</string>
 </resources>
